sterlang/examples/neg/src/n04.erlt
-module(n04).
-export([foo/2]).

%% even simpler example of row circularity
foo(B, R) ->
    if
        B -> #( self = R );
        true -> R
    end.
